--- a/index.html
+++ b/index.html
@@ -19,40 +19,43 @@
         <h3>Todo-List</h3>
       </div>
       <div class="todo-container">
-        <ul>
-          <li>
-            <label for="todoItem" class="list-item"
-              ><input type="checkbox" name="todoItem" id="todoItem" />
-              <p class="text">Style guide creation</p>
-              <span></span>
-              <i class="fas fa-trash-alt"></i>
-            </label>
-          </li>
-          <li>
-            <label for="todoItem" class="list-item"
-              ><input type="checkbox" name="todoItem" id="todoItem" checked />
-              <p class="text">Send wireframes</p>
-              <span></span>
-              <i class="fas fa-trash-alt"></i>
-            </label>
-          </li>
-          <li>
-            <label for="todoItem" class="list-item"
-              ><input type="checkbox" name="todoItem" id="todoItem" />
-              <p class="text">Readability About page</p>
-              <span></span>
-              <i class="fas fa-trash-alt"></i>
-            </label>
-          </li>
-          <li>
-            <label for="todoItem" class="list-item"
-              ><input type="checkbox" name="todoItem" id="todoItem" />
-              <p class="text">Check color contrast</p>
-              <span></span>
-              <i class="fas fa-trash-alt"></i>
-            </label>
-          </li>
-        </ul>
+          <input class="task-input-1" type="text" name="text" value="" placeholder= "Add new task here....">
+        <div class="task-list">
+          <ul id="myUL">
+            <li class="items">
+              <label for="todoItem" class="list-item"
+                ><input type="checkbox" name="todoItem" id="todoItem" />
+                <p class="text">Style guide creation</p>
+                <span></span>
+                <i class="fas fa-trash-alt"></i>
+              </label>
+            </li>
+            <li>
+              <label for="todoItem" class="list-item"
+                ><input type="checkbox" name="todoItem" id="todoItem" checked />
+                <p class="text">Send wireframes</p>
+                <span></span>
+                <i class="fas fa-trash-alt"></i>
+              </label>
+            </li>
+            <li>
+              <label for="todoItem" class="list-item"
+                ><input type="checkbox" name="todoItem" id="todoItem" />
+                <p class="text">Readability About page</p>
+                <span></span>
+                <i class="fas fa-trash-alt"></i>
+              </label>
+            </li>
+            <li>
+              <label for="todoItem" class="list-item"
+                ><input type="checkbox" name="todoItem" id="todoItem" />
+                <p class="text">Check color contrast</p>
+                <span></span>
+                <i class="fas fa-trash-alt"></i>
+              </label>
+            </li>
+          </ul>
+        </div>
       </div>
 
       <button type="submit" class="todo-button">
