Changes to be committed:

--- a/index.html
+++ b/index.html
@@ -23,41 +23,14 @@
         <div class="task-list">
           <ul id="myUL">
             <li class="items">
-              <label for="todoItem" class="list-item"
-                ><input type="checkbox" name="todoItem" id="todoItem" />
-                <p class="text">Style guide creation</p>
-                <span></span>
-                <i class="fas fa-trash-alt"></i>
-              </label>
-            </li>
-            <li>
-              <label for="todoItem" class="list-item"
-                ><input type="checkbox" name="todoItem" id="todoItem" checked />
-                <p class="text">Send wireframes</p>
-                <span></span>
-                <i class="fas fa-trash-alt"></i>
-              </label>
-            </li>
-            <li>
-              <label for="todoItem" class="list-item"
-                ><input type="checkbox" name="todoItem" id="todoItem" />
-                <p class="text">Readability About page</p>
-                <span></span>
-                <i class="fas fa-trash-alt"></i>
-              </label>
-            </li>
-            <li>
-              <label for="todoItem" class="list-item"
-                ><input type="checkbox" name="todoItem" id="todoItem" />
-                <p class="text">Check color contrast</p>
-                <span></span>
-                <i class="fas fa-trash-alt"></i>
-              </label>
+              <!-- <label for="todoItem" class="list-item">
+
+                
+              </label> -->
             </li>
           </ul>
         </div>
       </div>
-
       <button type="submit" class="todo-button">
         <i class="fa fa-plus" aria-hidden="true"></i>
         New Task
