--- a/index.html
+++ b/index.html
@@ -19,18 +19,54 @@
         <h3>Todo-List</h3>
       </div>
       <div class="todo-container">
-          <input class="task-input-1" type="text" name="text" value="" placeholder= "Add new task here....">
-        <div class="task-list">
-          <ul id="myUL">
-            <li class="items">
-              <!-- <label for="todoItem" class="list-item">
+        <input
+          class="todo-input hide"
+          type="text"
+          name="text"
+          placeholder="Enter new task here..."
+        />
 
-                
-              </label> -->
-            </li>
-          </ul>
-        </div>
+        <ul class="todo-list">
+          <!-- <li>
+            <label for="todo-item" class="execute"
+              ><input type="checkbox" name="todo-item" class="todo-item" />
+              <p class="text">Style guide creation</p>
+              <span></span>
+              <i class="fas fa-trash-alt"></i>
+            </label>
+          </li>
+          <li>
+            <label for="todo-item" class="execute"
+              ><input
+                type="checkbox"
+                name="todo-item"
+                class="todo-item"
+                checked
+              />
+              <p class="text">Send wireframes</p>
+              <span></span>
+              <i class="fas fa-trash-alt"></i>
+            </label>
+          </li>
+          <li>
+            <label for="todo-item" class="execute"
+              ><input type="checkbox" name="todo-item" class="todo-item" />
+              <p class="text">Readability About page</p>
+              <span></span>
+              <i class="fas fa-trash-alt"></i>
+            </label>
+          </li>
+          <li>
+            <label for="todo-item" class="execute"
+              ><input type="checkbox" name="todo-item" class="todo-item" />
+              <p class="text">Check color contrast</p>
+              <span></span>
+              <i class="fas fa-trash-alt"></i>
+            </label>
+          </li> -->
+        </ul>
       </div>
+
       <button type="submit" class="todo-button">
         <i class="fa fa-plus" aria-hidden="true"></i>
         New Task
